--- a/code2blog_cxf/src/main/app/mule-deploy.properties
+++ b/code2blog_cxf/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue Dec 03 14:09:41 IST 2019
+#Wed Dec 04 21:59:31 IST 2019
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=as_webservice.xml
+config.resources=vp_soapprovider.xml,as_webservice.xml,as_soapconsumer.xml
 domain=default
