--- a/code2blog_variables/src/main/app/mule-deploy.properties
+++ b/code2blog_variables/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Mon May 25 20:21:39 IST 2020
+#Tue May 26 18:27:46 IST 2020
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=global_elements.xml,code2blog_variables.xml,code2blog_flow_variable_02.xml,code2blog_flow_variable_01.xml
+config.resources=global_elements.xml,code2blog_variables.xml,code2blog_session_variable_02.xml,code2blog_session_variable_01.xml,code2blog_flow_variable_02.xml,code2blog_flow_variable_01.xml
 domain=default
