var-3 csv file acquired and logged details to console

--- a/code2blog_variables/src/main/app/mule-deploy.properties
+++ b/code2blog_variables/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue May 26 19:19:06 IST 2020
+#Wed May 27 11:57:49 IST 2020
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=global_elements.xml,code2blog_variables.xml,code2blog_session_variable_04.xml,code2blog_session_variable_03.xml,code2blog_session_variable_02.xml,code2blog_session_variable_01.xml,code2blog_flow_variable_02.xml,code2blog_flow_variable_01.xml,code2blog_batch_variable.xml
 domain=default
-config.resources=global_elements.xml,code2blog_variables.xml,code2blog_session_variable_04.xml,code2blog_session_variable_03.xml,code2blog_session_variable_02.xml,code2blog_session_variable_01.xml,code2blog_flow_variable_02.xml,code2blog_flow_variable_01.xml
