--- a/code2blog_connectors/src/main/app/mule-deploy.properties
+++ b/code2blog_connectors/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Mon Dec 28 15:23:11 IST 2020
+#Wed Dec 30 11:53:58 IST 2020
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=global_elements.xml,code2blog_connectors_wmq.xml,code2blog_connectors_webservice_consumer.xml
 domain=default
+config.resources=global_elements.xml,code2blog_connectors_wmq.xml,code2blog_connectors_webservice_consumer.xml,code2blog_connectors_idempotent.xml
