--- a/code2blog_connectors/pom.xml
+++ b/code2blog_connectors/pom.xml
@@ -12,7 +12,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<system.jar.folder>C:/vishnu/ext-lib/maven-system-path</system.jar.folder>
 		<mule.version>3.7.3</mule.version>
 		<mule.tools.version>1.1</mule.tools.version>
 	</properties>
@@ -132,44 +131,19 @@
 			<scope>test</scope>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.ibm.mq.allclient</groupId> -->
-<!-- 			<artifactId>com.ibm.mq.allclient</artifactId> -->
-<!-- 			<version>2020.12</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${system.jar.folder}/com.ibm.mq.allclient.jar</systemPath> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>fscontext</groupId> -->
-<!-- 			<artifactId>fscontext</artifactId> -->
-<!-- 			<version>2020.12</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${system.jar.folder}/fscontext.jar</systemPath> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>jms</groupId> -->
-<!-- 			<artifactId>jms</artifactId> -->
-<!-- 			<version>2020.12</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${system.jar.folder}/jms.jar</systemPath> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>providerutil</groupId> -->
-<!-- 			<artifactId>providerutil</artifactId> -->
-<!-- 			<version>2020.12</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${system.jar.folder}/providerutil.jar</systemPath> -->
-<!-- 		</dependency> -->
-
 <dependency>
   <groupId>vp</groupId>
   <artifactId>com.ibm.mq</artifactId>
   <version>7</version>
 <!--   scope system is deprecated. So i installed the jar file to my local repo and then using mq jar file here -->
 </dependency>
+
+<dependency>
+  <groupId>vp</groupId>
+  <artifactId>oracle</artifactId>
+  <version>14</version>
+</dependency>
+
 
 	</dependencies>
 
