--- a/code2blog_connectors/src/main/app/mule-deploy.properties
+++ b/code2blog_connectors/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Thu Dec 31 09:24:05 IST 2020
+#Thu Dec 31 11:09:43 IST 2020
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=global_elements.xml,code2blog_connectors_wmq.xml,code2blog_connectors_webservice_consumer.xml,code2blog_connectors_validation.xml,code2blog_connectors_idempotent.xml,code2blog_connectors_file.xml,code2blog_connectors_choice.xml
 domain=default
+config.resources=global_elements.xml,code2blog_connectors_wmq.xml,code2blog_connectors_webservice_consumer.xml,code2blog_connectors_validation.xml,code2blog_connectors_idempotent.xml,code2blog_connectors_file.xml,code2blog_connectors_database.xml,code2blog_connectors_choice.xml
