--- a/code2blog_mule4_connectors/pom.xml
+++ b/code2blog_mule4_connectors/pom.xml
@@ -72,6 +72,12 @@
             <version>1.2.3</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-xml-module</artifactId>
+            <version>1.2.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
     </dependencies>
 
 	<repositories>
