--- a/code2blog_mule4_connectors/pom.xml
+++ b/code2blog_mule4_connectors/pom.xml
@@ -78,6 +78,12 @@
             <version>1.2.3</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-json-module</artifactId>
+            <version>2.1.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
     </dependencies>
 
 	<repositories>
