--- a/code2blog_mule4_download_cloudhub_logs/src/main/resources/config-dev.properties
+++ b/code2blog_mule4_download_cloudhub_logs/src/main/resources/config-dev.properties
@@ -1,1 +1,2 @@
 cloudhub.applications.url=https://anypoint.mulesoft.com/cloudhub/api/v2/applications
+cloudhub.deployments.url=https://anypoint.mulesoft.com/cloudhub/api/v2/applications/[domain]/deployments?orderByDate=DESC
