cdcl-1 /logs tested successfully

--- a/code2blog_mule4_download_cloudhub_logs/src/main/resources/config-dev.properties
+++ b/code2blog_mule4_download_cloudhub_logs/src/main/resources/config-dev.properties
@@ -1,2 +1,3 @@
 cloudhub.applications.url=https://anypoint.mulesoft.com/cloudhub/api/v2/applications
 cloudhub.deployments.url=https://anypoint.mulesoft.com/cloudhub/api/v2/applications/[domain]/deployments?orderByDate=DESC
+cloudhub.logs.url=https://anypoint.mulesoft.com/cloudhub/api/v2/applications/[domain]/deployments/[deploymentId]/logs
