--- a/code2blog_mule4_connectors/pom.xml
+++ b/code2blog_mule4_connectors/pom.xml
@@ -36,6 +36,7 @@
 						    <artifactId>ojdbc6</artifactId>
                         </sharedLibrary>
                     </sharedLibraries>
+                <classifier>mule-application</classifier>
                 </configuration>
 			</plugin>
 		</plugins>
@@ -63,7 +64,7 @@
 <dependency>
     <groupId>oracle</groupId>
     <artifactId>ojdbc6</artifactId>
-    <version>11.2.0.3</version>
+    <version>11.1.0</version>
 </dependency>
 
     	<dependency>
