c4c-3 using ${b085-config.http.listener} from config.properties to replace 'HTTP_Listener_config'

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ target
 /secure-properties-tool.txt
 /code2blog_mule4_uses_retry/vp-copy.bat - Shortcut.lnk
 /code2blog_mule4_retry_errors/vp-copy.bat - Shortcut.lnk
+.mule
