--- a/code2blog_mule4_connectors/pom.xml
+++ b/code2blog_mule4_connectors/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>com.wordpress.code2blog</groupId>
 	<artifactId>code2blog_mule4_connectors</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
@@ -36,7 +36,7 @@
 						    <artifactId>ojdbc6</artifactId>
                         </sharedLibrary>
                     </sharedLibraries>
-                <classifier>mule-application</classifier>
+                <classifier>mule-plugin</classifier>
                 </configuration>
 			</plugin>
 		</plugins>
