--- a/code2blog_mule4_repackage/pom.xml
+++ b/code2blog_mule4_repackage/pom.xml
@@ -49,6 +49,49 @@
             <version>1.2.0</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+
+		<dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-db-connector</artifactId>
+            <version>1.8.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+		<dependency>
+		    <groupId>oracle</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>11.1.0</version>
+		</dependency>
+       	<dependency>
+            <groupId>com.mulesoft.modules</groupId>
+            <artifactId>mule-secure-configuration-property-module</artifactId>
+            <version>1.2.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-xml-module</artifactId>
+            <version>1.2.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-json-module</artifactId>
+            <version>2.1.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+        <dependency>
+        	<groupId>com.wordpress.code2blog</groupId>
+			<artifactId>code2blog_mule4_connectors</artifactId>
+		    <version>1.0.0-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+        
+        <dependency>
+        	<groupId>com.wordpress.code2blog</groupId>
+			<artifactId>code2blog_mule4_dataweave</artifactId>
+		    <version>1.0.0-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
 	</dependencies>
 
 	<repositories>
